Tabla de pruebas en el personas-tabla

--- a/src/app/personas-tabla/personas-tabla.component.html
+++ b/src/app/personas-tabla/personas-tabla.component.html
@@ -1,1 +1,22 @@
-<p>personas-tabla works!</p>
+<!-- table>thead>tr>th*3 -->
+<table>
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nombre</th>
+            <th>Email</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Javier</td>
+            <td>javier@eskura21.com</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Pepe</td>
+            <td>pepe@sucasa.com</td>
+        </tr>
+    </tbody>
+</table>
