--- a/src/app/mensajes/mensajes.component.html
+++ b/src/app/mensajes/mensajes.component.html
@@ -1,1 +1,6 @@
-<p>mensajes works!</p>
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    MENSAJE
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
