--- a/src/app/mensajes/mensajes.component.html
+++ b/src/app/mensajes/mensajes.component.html
@@ -1,5 +1,5 @@
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-    MENSAJE
+<div class="alert alert-{{nivel}} alert-dismissible fade show" role="alert">
+    {{mensaje}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
