--- a/src/app/mensajes/mensajes.component.html
+++ b/src/app/mensajes/mensajes.component.html
@@ -1,6 +1,6 @@
-<div class="alert alert-{{nivel}} alert-dismissible fade show" role="alert">
-    {{mensaje}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+<div *ngIf="this.mensajeService.mensaje" class="alert alert-{{this.mensajeService.nivel}} alert-dismissible fade show" role="alert">
+    {{this.mensajeService.mensaje}}
+    <button (click)="this.mensajeService.clear()" type="button" class="close" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
