Aspecto listado con botones

--- a/src/app/personas-tabla/personas-tabla.component.html
+++ b/src/app/personas-tabla/personas-tabla.component.html
@@ -5,6 +5,7 @@
             <th>Id</th>
             <th>Nombre</th>
             <th>Email</th>
+            <th>Opciones</th>
         </tr>
     </thead>
     <tbody>
@@ -12,6 +13,13 @@
             <td>{{persona.id}}</td>
             <td>{{persona.nombre}}</td>
             <td>{{persona.email}}</td>
+            <td>
+                <a class="btn btn-primary" routerLink="persona-detalle">Modificar</a>
+                &nbsp;
+                <a class="btn btn-danger" href="#">Borrar</a>
+            </td>
         </tr>
     </tbody>
 </table>
+
+<button class="btn btn-primary">Añadir</button>
