--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,4 @@
 </nav>
 <app-mensajes></app-mensajes>
 <h1>Personas</h1>
-<app-personas-tabla></app-personas-tabla>
+<router-outlet></router-outlet>
