Container de bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,7 @@
   </div>
 </nav>
 <app-mensajes></app-mensajes>
+<div class="container">
 <h1>Personas</h1>
 <router-outlet></router-outlet>
+</div>
