--- a/src/app/persona-detalles/persona-detalles.component.html
+++ b/src/app/persona-detalles/persona-detalles.component.html
@@ -2,19 +2,19 @@
     <div class="form-group row">
         <label for="id" class="col-sm-2 col-form-label">Id</label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" id="id" placeholder="Id" readonly>
+            <input [(ngModel)]="persona.id" name="id" type="number" class="form-control" id="id" placeholder="Id" readonly>
         </div>
     </div>
     <div class="form-group row">
         <label for="nombre" class="col-sm-2 col-form-label">Nombre</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+            <input [(ngModel)]="persona.nombre" name="nombre" type="text" class="form-control" id="nombre" placeholder="Nombre">
         </div>
     </div>
     <div class="form-group row">
         <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" placeholder="Email">
+            <input [(ngModel)]="persona.email" name="email" type="email" class="form-control" id="email" placeholder="Email">
         </div>
     </div>
     <div class="form-group row">
