--- a/src/app/persona-detalles/persona-detalles.component.html
+++ b/src/app/persona-detalles/persona-detalles.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group row">
         <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary">Aceptar</button>
+            <button (click)="onAceptar()" class="btn btn-primary">Aceptar</button>
         </div>
     </div>
 </form>
