--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):hover {
+    color: white;
+}
